src/com/theoxao/antlr/autogen/JavaParser.java
package com.theoxao.antlr.autogen;

// Generated from JavaParser.g4 by ANTLR 4.6

import com.theoxao.antlr.model.Definition;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaParser extends Parser {
	public static final int
			ABSTRACT = 1, ASSERT = 2, BOOLEAN = 3, BREAK = 4, BYTE = 5, CASE = 6, CATCH = 7, CHAR = 8,
			CLASS = 9, CONST = 10, CONTINUE = 11, DEFAULT = 12, DO = 13, DOUBLE = 14, ELSE = 15,
			ENUM = 16, EXTENDS = 17, FINAL = 18, FINALLY = 19, FLOAT = 20, FOR = 21, IF = 22, GOTO = 23,
			IMPLEMENTS = 24, IMPORT = 25, INSTANCEOF = 26, INT = 27, INTERFACE = 28, LONG = 29,
			NATIVE = 30, NEW = 31, PACKAGE = 32, PRIVATE = 33, PROTECTED = 34, PUBLIC = 35, RETURN = 36,
			SHORT = 37, STATIC = 38, STRICTFP = 39, SUPER = 40, SWITCH = 41, SYNCHRONIZED = 42,
			THIS = 43, THROW = 44, THROWS = 45, TRANSIENT = 46, TRY = 47, VOID = 48, VOLATILE = 49,
			WHILE = 50, DECIMAL_LITERAL = 51, HEX_LITERAL = 52, OCT_LITERAL = 53, BINARY_LITERAL = 54,
			FLOAT_LITERAL = 55, HEX_FLOAT_LITERAL = 56, BOOL_LITERAL = 57, CHAR_LITERAL = 58,
			STRING_LITERAL = 59, NULL_LITERAL = 60, LPAREN = 61, RPAREN = 62, LBRACE = 63, RBRACE = 64,
			LBRACK = 65, RBRACK = 66, SEMI = 67, COMMA = 68, DOT = 69, ASSIGN = 70, GT = 71, LT = 72,
			BANG = 73, TILDE = 74, QUESTION = 75, COLON = 76, EQUAL = 77, LE = 78, GE = 79, NOTEQUAL = 80,
			AND = 81, OR = 82, INC = 83, DEC = 84, ADD = 85, SUB = 86, MUL = 87, DIV = 88, BITAND = 89,
			BITOR = 90, CARET = 91, MOD = 92, ADD_ASSIGN = 93, SUB_ASSIGN = 94, MUL_ASSIGN = 95,
			DIV_ASSIGN = 96, AND_ASSIGN = 97, OR_ASSIGN = 98, XOR_ASSIGN = 99, MOD_ASSIGN = 100,
			LSHIFT_ASSIGN = 101, RSHIFT_ASSIGN = 102, URSHIFT_ASSIGN = 103, ARROW = 104, COLONCOLON = 105,
			AT = 106, ELLIPSIS = 107, WS = 108, COMMENT = 109, LINE_COMMENT = 110, IDENTIFIER = 111;
	public static final int
			RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2,
			RULE_typeDeclaration = 3, RULE_enumDeclaration = 4, RULE_enumConstants = 5,
			RULE_enumConstant = 6, RULE_enumBodyDeclarations = 7, RULE_modifier = 8,
			RULE_classOrInterfaceModifier = 9, RULE_variableModifier = 10, RULE_classDeclaration = 11,
			RULE_typeParameters = 12, RULE_typeParameter = 13, RULE_typeBound = 14,
			RULE_classBody = 15, RULE_classBodyDeclaration = 16, RULE_memberDeclaration = 17,
			RULE_methodDeclaration = 18, RULE_methodBody = 19, RULE_typeTypeOrVoid = 20,
			RULE_genericMethodDeclaration = 21, RULE_genericConstructorDeclaration = 22,
			RULE_constructorDeclaration = 23, RULE_fieldDeclaration = 24, RULE_variableDeclarators = 25,
			RULE_variableDeclarator = 26, RULE_variableDeclaratorId = 27, RULE_variableInitializer = 28,
			RULE_arrayInitializer = 29, RULE_classOrInterfaceType = 30, RULE_typeArgument = 31,
			RULE_qualifiedNameList = 32, RULE_formalParameters = 33, RULE_formalParameterList = 34,
			RULE_formalParameter = 35, RULE_lastFormalParameter = 36, RULE_qualifiedName = 37,
			RULE_literal = 38, RULE_integerLiteral = 39, RULE_floatLiteral = 40, RULE_annotation = 41,
			RULE_elementValuePairs = 42, RULE_elementValuePair = 43, RULE_elementValue = 44,
			RULE_elementValueArrayInitializer = 45, RULE_block = 46, RULE_blockStatement = 47,
			RULE_localVariableDeclaration = 48, RULE_localTypeDeclaration = 49, RULE_statement = 50,
			RULE_expressionList = 51, RULE_methodCall = 52, RULE_expression = 53,
			RULE_primary = 54, RULE_creator = 55, RULE_createdName = 56, RULE_innerCreator = 57,
			RULE_arrayCreatorRest = 58, RULE_classCreatorRest = 59, RULE_explicitGenericInvocation = 60,
			RULE_typeArgumentsOrDiamond = 61, RULE_nonWildcardTypeArgumentsOrDiamond = 62,
			RULE_nonWildcardTypeArguments = 63, RULE_typeList = 64, RULE_typeType = 65,
			RULE_primitiveType = 66, RULE_typeArguments = 67, RULE_superSuffix = 68,
			RULE_explicitGenericInvocationSuffix = 69, RULE_arguments = 70;
	public static final String[] ruleNames = {
			"compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration",
			"enumDeclaration", "enumConstants", "enumConstant", "enumBodyDeclarations",
			"modifier", "classOrInterfaceModifier", "variableModifier", "classDeclaration",
			"typeParameters", "typeParameter", "typeBound", "classBody", "classBodyDeclaration",
			"memberDeclaration", "methodDeclaration", "methodBody", "typeTypeOrVoid",
			"genericMethodDeclaration", "genericConstructorDeclaration", "constructorDeclaration",
			"fieldDeclaration", "variableDeclarators", "variableDeclarator", "variableDeclaratorId",
			"variableInitializer", "arrayInitializer", "classOrInterfaceType", "typeArgument",
			"qualifiedNameList", "formalParameters", "formalParameterList", "formalParameter",
			"lastFormalParameter", "qualifiedName", "literal", "integerLiteral", "floatLiteral",
			"annotation", "elementValuePairs", "elementValuePair", "elementValue",
			"elementValueArrayInitializer", "block", "blockStatement", "localVariableDeclaration",
			"localTypeDeclaration", "statement", "expressionList", "methodCall", "expression",
			"primary", "creator", "createdName", "innerCreator", "arrayCreatorRest",
			"classCreatorRest", "explicitGenericInvocation", "typeArgumentsOrDiamond",
			"nonWildcardTypeArgumentsOrDiamond", "nonWildcardTypeArguments", "typeList",
			"typeType", "primitiveType", "typeArguments", "superSuffix", "explicitGenericInvocationSuffix",
			"arguments"
	};
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();

	private static final String[] _LITERAL_NAMES = {
			null, "'abstract'", "'assert'", "'boolean'", "'break'", "'byte'", "'case'",
			"'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'",
			"'do'", "'double'", "'else'", "'enum'", "'extends'", "'final'", "'finally'",
			"'float'", "'for'", "'if'", "'goto'", "'implements'", "'import'", "'instanceof'",
			"'int'", "'interface'", "'long'", "'native'", "'new'", "'package'", "'private'",
			"'protected'", "'public'", "'return'", "'short'", "'static'", "'strictfp'",
			"'super'", "'switch'", "'synchronized'", "'this'", "'throw'", "'throws'",
			"'transient'", "'try'", "'void'", "'volatile'", "'while'", null, null,
			null, null, null, null, null, null, null, "'null'", "'('", "')'", "'{'",
			"'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'",
			"'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'",
			"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='",
			"'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='",
			"'>>>='", "'->'", "'::'", "'@'", "'...'"
	};


	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	private static final String[] _SYMBOLIC_NAMES = {
			null, "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH",
			"CHAR", "CLASS", "CONST", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE",
			"ENUM", "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "GOTO", "IMPLEMENTS",
			"IMPORT", "INSTANCEOF", "INT", "INTERFACE", "LONG", "NATIVE", "NEW", "PACKAGE",
			"PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT", "STATIC", "STRICTFP",
			"SUPER", "SWITCH", "SYNCHRONIZED", "THIS", "THROW", "THROWS", "TRANSIENT",
			"TRY", "VOID", "VOLATILE", "WHILE", "DECIMAL_LITERAL", "HEX_LITERAL",
			"OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL",
			"BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "NULL_LITERAL", "LPAREN",
			"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT",
			"ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE",
			"GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV",
			"BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN",
			"DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN",
			"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "ARROW", "COLONCOLON", "AT", "ELLIPSIS",
			"WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER"
	};

	static {
		RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION);
	}

	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public JavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@Override
	public String getGrammarFileName() {
		return "JavaParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN; }

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(143);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
					case 1: {
						setState(142);
						packageDeclaration();
					}
					break;
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == IMPORT) {
					{
						{
							setState(145);
							importDeclaration();
						}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABSTRACT) | (1L << CLASS) | (1L << ENUM) | (1L << FINAL) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << STATIC) | (1L << STRICTFP))) != 0) || _la == SEMI || _la == AT) {
					{
						{
							setState(151);
							typeDeclaration();
						}
					}
					setState(156);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(157);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AT) {
					{
						{
							setState(159);
							annotation();
						}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(165);
				match(PACKAGE);
				setState(166);
				qualifiedName();
				setState(167);
				match(SEMI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(169);
				match(IMPORT);
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == STATIC) {
					{
						setState(170);
						match(STATIC);
					}
				}

				setState(173);
				qualifiedName();
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == DOT) {
					{
						setState(174);
						match(DOT);
						setState(175);
						match(MUL);
					}
				}

				setState(178);
				match(SEMI);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDeclaration);
		int _la;
		try {
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case ABSTRACT:
				case CLASS:
				case ENUM:
				case FINAL:
				case PRIVATE:
				case PROTECTED:
				case PUBLIC:
				case STATIC:
				case STRICTFP:
				case AT:
					enterOuterAlt(_localctx, 1);
				{
					setState(183);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABSTRACT) | (1L << FINAL) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << STATIC) | (1L << STRICTFP))) != 0) || _la == AT) {
						{
							{
								setState(180);
								classOrInterfaceModifier();
							}
						}
						setState(185);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(188);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
						case CLASS: {
							setState(186);
							classDeclaration();
						}
						break;
						case ENUM: {
							setState(187);
							enumDeclaration();
						}
						break;
						default:
							throw new NoViableAltException(this);
					}
				}
				break;
				case SEMI:
					enterOuterAlt(_localctx, 2);
				{
					setState(190);
					match(SEMI);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final EnumDeclarationContext enumDeclaration() throws RecognitionException {
		EnumDeclarationContext _localctx = new EnumDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enumDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(193);
				match(ENUM);
				setState(194);
				match(IDENTIFIER);
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == IMPLEMENTS) {
					{
						setState(195);
						match(IMPLEMENTS);
						setState(196);
						typeList();
					}
				}

				setState(199);
				match(LBRACE);
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == AT || _la == IDENTIFIER) {
					{
						setState(200);
						enumConstants();
					}
				}

				setState(204);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == COMMA) {
					{
						setState(203);
						match(COMMA);
					}
				}

				setState(207);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == SEMI) {
					{
						setState(206);
						enumBodyDeclarations();
					}
				}

				setState(209);
				match(RBRACE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final EnumConstantsContext enumConstants() throws RecognitionException {
		EnumConstantsContext _localctx = new EnumConstantsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enumConstants);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(211);
				enumConstant();
				setState(216);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(212);
								match(COMMA);
								setState(213);
								enumConstant();
							}
						}
					}
					setState(218);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final EnumConstantContext enumConstant() throws RecognitionException {
		EnumConstantContext _localctx = new EnumConstantContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_enumConstant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(222);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AT) {
					{
						{
							setState(219);
							annotation();
						}
					}
					setState(224);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(225);
				match(IDENTIFIER);
				setState(227);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LPAREN) {
					{
						setState(226);
						arguments();
					}
				}

				setState(230);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == LBRACE) {
					{
						setState(229);
						classBody();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final EnumBodyDeclarationsContext enumBodyDeclarations() throws RecognitionException {
		EnumBodyDeclarationsContext _localctx = new EnumBodyDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_enumBodyDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(232);
				match(SEMI);
				setState(236);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABSTRACT) | (1L << BOOLEAN) | (1L << BYTE) | (1L << CHAR) | (1L << CLASS) | (1L << DOUBLE) | (1L << ENUM) | (1L << FINAL) | (1L << FLOAT) | (1L << INT) | (1L << LONG) | (1L << NATIVE) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << SHORT) | (1L << STATIC) | (1L << STRICTFP) | (1L << SYNCHRONIZED) | (1L << TRANSIENT) | (1L << VOID) | (1L << VOLATILE) | (1L << LBRACE))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (SEMI - 67)) | (1L << (LT - 67)) | (1L << (AT - 67)) | (1L << (IDENTIFIER - 67)))) != 0)) {
					{
						{
							setState(233);
							classBodyDeclaration();
						}
					}
					setState(238);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ModifierContext modifier() throws RecognitionException {
		ModifierContext _localctx = new ModifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_modifier);
		try {
			setState(244);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case ABSTRACT:
				case FINAL:
				case PRIVATE:
				case PROTECTED:
				case PUBLIC:
				case STATIC:
				case STRICTFP:
				case AT:
					enterOuterAlt(_localctx, 1);
				{
					setState(239);
					classOrInterfaceModifier();
				}
				break;
				case NATIVE:
					enterOuterAlt(_localctx, 2);
				{
					setState(240);
					match(NATIVE);
				}
				break;
				case SYNCHRONIZED:
					enterOuterAlt(_localctx, 3);
				{
					setState(241);
					match(SYNCHRONIZED);
				}
				break;
				case TRANSIENT:
					enterOuterAlt(_localctx, 4);
				{
					setState(242);
					match(TRANSIENT);
				}
				break;
				case VOLATILE:
					enterOuterAlt(_localctx, 5);
				{
					setState(243);
					match(VOLATILE);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ClassOrInterfaceModifierContext classOrInterfaceModifier() throws RecognitionException {
		ClassOrInterfaceModifierContext _localctx = new ClassOrInterfaceModifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_classOrInterfaceModifier);
		try {
			setState(254);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case AT:
					enterOuterAlt(_localctx, 1);
				{
					setState(246);
					annotation();
				}
				break;
				case PUBLIC:
					enterOuterAlt(_localctx, 2);
				{
					setState(247);
					match(PUBLIC);
				}
				break;
				case PROTECTED:
					enterOuterAlt(_localctx, 3);
				{
					setState(248);
					match(PROTECTED);
				}
				break;
				case PRIVATE:
					enterOuterAlt(_localctx, 4);
				{
					setState(249);
					match(PRIVATE);
				}
				break;
				case STATIC:
					enterOuterAlt(_localctx, 5);
				{
					setState(250);
					match(STATIC);
				}
				break;
				case ABSTRACT:
					enterOuterAlt(_localctx, 6);
				{
					setState(251);
					match(ABSTRACT);
				}
				break;
				case FINAL:
					enterOuterAlt(_localctx, 7);
				{
					setState(252);
					match(FINAL);
				}
				break;
				case STRICTFP:
					enterOuterAlt(_localctx, 8);
				{
					setState(253);
					match(STRICTFP);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}
